<resources>
    <string name="app_name">PasarOnline</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Saya</string>
    <string name="title_notifications">Pemberitahuan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pasar_online">Pasar Online</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="sembako">Sembako</string>
    <string name="bumbu">Bumbu</string>
    <string name="sayuran">Sayuran</string>
    <string name="makanan_olahan">Makanan Olahan</string>
    <string name="makanan">makanan</string>
    <string name="olahan">olahan</string>
    <string name="ikan">Ikan</string>
    <string name="daging">Daging</string>
    <string name="kategori">Kategori</string>
    <string name="kebutuhan">Kebutuhan</string>
    <string name="pokok">Pokok</string>
    <string name="minuman">Minuman</string>
    <string name="roti">Roti</string>
    <string name="perawatan">Perawatan</string>
    <string name="tubuh">Tubuh</string>
    <string name="snack">Snack</string>
    <string name="produk">Produk</string>
    <string name="pembersih">Pembersih</string>
    <string name="kebersihan">Kebersihan</string>
    <string name="anda_belum_masuk">Anda Belum Masuk</string>
    <string name="masuk">Silahkan masuk menggunakan akun yang telah dibuat</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="login_admin">Login Admin</string>
    <string name="silahkan_buat_akun">Silahkan Buat Akun</string>
    <string name="daftar">Silahkan lengkapi informasi berikut</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_whatsapp_aktif">No. WhatsApp Aktif</string>
    <string name="alamat">Alamat</string>
    <string name="daftarkan_akun_saya">Daftarkan Akun Saya</string>
    <string name="your_name">Your Name</string>
    <string name="whatsapp">WhatsApp:</string>
    <string name="your_number">Your Number</string>
    <string name="manage">Manage</string>
    <string name="keranjang">Keranjang</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cara_bayar">Cara bayar</string>
    <string name="keluar">Keluar</string>
    <string name="riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="anda_belum_melakukan_pemesanan_apapun">Anda belum melakukan pemesanan apapun</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="lupa_password">Lupa Password?</string>
</resources>
