<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.CreateAccountFragment"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/market"
                        tools:src="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/silahkan_buat_akun"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/daftar"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/input_design"
                        android:textColor="@android:color/black"
                        android:padding="15dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:hint="@string/nama_lengkap" />

                    <EditText
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/input_design"
                        android:textColor="@android:color/black"
                        android:padding="15dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:hint="@string/no_whatsapp_aktif" />

                    <EditText
                        android:id="@+id/alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/input_design"
                        android:textColor="@android:color/black"
                        android:padding="15dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:hint="@string/alamat" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/input_design"
                        android:textColor="@android:color/black"
                        android:padding="15dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:hint="@string/email" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/input_design"
                        android:textColor="@android:color/black"
                        android:padding="15dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:hint="@string/kata_sandi" />

                    <Button
                        android:id="@+id/daftarNow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/daftarkan_akun_saya"
                        android:background="@drawable/buttons"
                        android:textSize="16sp"
                        android:padding="15dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textAllCaps="false"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:id="@+id/loginFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>

